# tdd4embedded

./: .gitignore  Makefile.am  Makefile.in  config.status  configure  configure.in  configure.scan
projects/: Makefile.am  Makefile.in
projects/LedDriver/: LedDriver.cpp  LedDriver.h  LedDriverTest.cpp  Makefile.am  Makefile.in
projects/LedDriver/mocks/: RuntimeErrorStub.cpp  RuntimeErrorStub.h
projects/LedDriver/utils/: RuntimeError.h
projects/stdio/: Makefile.am  Makefile.in  SprintfTest.cpp
src/: Makefile.am  Makefile.in  game.cpp  marubatsu.cpp  marubatsu.h
