
check_PROGRAMS = LedDriverTest
LedDriverTest_SOURCES=LedDriverTest.cpp LedDriver.cpp mocks/RuntimeErrorStub.cpp
LedDriverTest_CXXFLAGS = -I /home/e11062/SAGYOU/cpputest-master/include/
LedDriverTest_LDFLAGS = -L /home/e11062/SAGYOU/cpputest-master/lib
LedDriverTest_LDADD = -lCppUTest

XFAIL_TESTS = 
AUTOMAKE_OPTIONS = color-tests

TESTS = LedDriverTest

