check_PROGRAMS = SprintfTest
SprintfTest_SOURCES=SprintfTest.cpp 
SprintfTest_CXXFLAGS = -I /home/e11062/SAGYOU/cpputest-master/include/
SprintfTest_LDFLAGS = -L /home/e11062/SAGYOU/cpputest-master/lib
SprintfTest_LDADD = -lCppUTest

XFAIL_TESTS = 
AUTOMAKE_OPTIONS = color-tests

TESTS = SprintfTest

